--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'me.relex:circleindicator:2.1.6'
+    implementation 'com.google.code.gson:gson:2.8.8'
 
 
 
