--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,12 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.google.code.gson:gson:2.8.8'
 
+    //room
+    def room_version = "2.0.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-common:$room_version"
+
 
 
 
